--- a/Coral_Joyeria/test-output/old/Default suite/classes.html
+++ b/Coral_Joyeria/test-output/old/Default suite/classes.html
@@ -4,18 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ProductDetails</td>
+<td>TestLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>dummyTestCase</td>
+<td>testLoginBadAccount</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testLoginEmpty</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testLoginSuccessCase</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -23,6 +35,14 @@
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>clean</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>teardown</td>
+<td>&nbsp;</td></tr>
 </table>
