--- a/Coral_Joyeria/test-output/old/Default suite/methods-alphabetical.html
+++ b/Coral_Joyeria/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbc1e0">  <td>19/03/24 22:18:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLogin.clean()[pri:0, instance:TestLogin@78c730]">&lt;&lt;clean</td> 
+<tr bgcolor="bbc1e0">  <td>19/03/24 23:38:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProductDetails.addDifferentProductToCart()[pri:1, instance:TestProductDetails@78c730]">addDifferentProductToCart</td> 
+  <td>main@21617358</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/24 23:39:07</td>   <td>9107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProductDetails.addMoreThanOneToCart()[pri:2, instance:TestProductDetails@78c730]">addMoreThanOneToCart</td> 
+  <td>main@21617358</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/24 23:38:42</td>   <td>-15889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProductDetails.addOneToCart()[pri:0, instance:TestProductDetails@78c730]">addOneToCart</td> 
+  <td>main@21617358</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/24 23:38:57</td>   <td>-873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProductDetails.clean()[pri:0, instance:TestProductDetails@78c730]">&lt;&lt;clean</td> 
 <td>&nbsp;</td>  <td>main@21617358</td>   <td></td> </tr>
-<tr bgcolor="bbc1e0">  <td>19/03/24 22:18:07</td>   <td>3167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLogin.clean()[pri:0, instance:TestLogin@78c730]">&lt;&lt;clean</td> 
+<tr bgcolor="bbc1e0">  <td>19/03/24 23:39:06</td>   <td>8252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProductDetails.clean()[pri:0, instance:TestProductDetails@78c730]">&lt;&lt;clean</td> 
 <td>&nbsp;</td>  <td>main@21617358</td>   <td></td> </tr>
-<tr bgcolor="bbc1e0">  <td>19/03/24 22:18:14</td>   <td>9959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLogin.clean()[pri:0, instance:TestLogin@78c730]">&lt;&lt;clean</td> 
+<tr bgcolor="bbc1e0">  <td>19/03/24 23:39:15</td>   <td>17409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProductDetails.clean()[pri:0, instance:TestProductDetails@78c730]">&lt;&lt;clean</td> 
 <td>&nbsp;</td>  <td>main@21617358</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>19/03/24 22:17:50</td>   <td>-14437</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestLogin@78c730]">&gt;&gt;setup</td> 
+<tr bgcolor="b4c3ab">  <td>19/03/24 23:38:38</td>   <td>-19734</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestProductDetails@78c730]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21617358</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>19/03/24 22:18:19</td>   <td>15016</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestLogin@78c730]">&lt;&lt;teardown</td> 
+<tr bgcolor="b4c3ab">  <td>19/03/24 23:39:16</td>   <td>18458</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestProductDetails@78c730]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21617358</td>   <td></td> </tr>
-<tr bgcolor="bbc1e0">  <td>19/03/24 22:18:12</td>   <td>8190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.testLoginBadAccount()[pri:2, instance:TestLogin@78c730]">testLoginBadAccount</td> 
-  <td>main@21617358</td>   <td></td> </tr>
-<tr bgcolor="bbc1e0">  <td>19/03/24 22:18:06</td>   <td>1346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.testLoginEmpty()[pri:1, instance:TestLogin@78c730]">testLoginEmpty</td> 
-  <td>main@21617358</td>   <td></td> </tr>
-<tr bgcolor="bbc1e0">  <td>19/03/24 22:17:54</td>   <td>-10640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.testLoginSuccessCase()[pri:0, instance:TestLogin@78c730]">testLoginSuccessCase</td> 
-  <td>main@21617358</td>   <td></td> </tr>
 </table>
