--- a/Coral_Joyeria/test-output/emailable-report.html
+++ b/Coral_Joyeria/test-output/emailable-report.html
@@ -8,13 +8,19 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">38,813</td><td></td><td></td></tr>
+<tr><th colspan="7">Sprint 1</th></tr>
+<tr><td><a href="#t0">TestLogin</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">27,514</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">ProductDetails</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">38,321</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">6</th><th class="num">0</th><th class="num">0</th><th class="num">65,835</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">TestProductDetails</td><td><a href="#m0">addDifferentProductToCart</a></td><td rowspan="1">1553492338129</td><td rowspan="1">8251</td></tr><tr class="passedeven"><td><a href="#m1">addMoreThanOneToCart</a></td><td rowspan="1">1553492347236</td><td rowspan="1">8301</td></tr><tr class="passedeven"><td><a href="#m2">addOneToCart</a></td><td rowspan="1">1553492322240</td><td rowspan="1">15016</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Sprint 1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestLogin &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">TestLogin</td><td><a href="#m0">testLoginBadAccount</a></td><td rowspan="1">1554274320915</td><td rowspan="1">7022</td></tr><tr class="passedeven"><td><a href="#m1">testLoginEmpty</a></td><td rowspan="1">1554274318258</td><td rowspan="1">1800</td></tr><tr class="passedeven"><td><a href="#m2">testLoginSuccessCase</a></td><td rowspan="1">1554274306568</td><td rowspan="1">10734</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">ProductDetails &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">TestProductDetails</td><td><a href="#m3">addDifferentProductToCart</a></td><td rowspan="1">1554274349210</td><td rowspan="1">8160</td></tr><tr class="passedeven"><td><a href="#m4">addMoreThanOneToCart</a></td><td rowspan="1">1554274358278</td><td rowspan="1">7987</td></tr><tr class="passedeven"><td><a href="#m5">addOneToCart</a></td><td rowspan="1">1554274332915</td><td rowspan="1">15329</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TestProductDetails#addDifferentProductToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestProductDetails#addMoreThanOneToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestProductDetails#addOneToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestLogin</h2><h3 id="m0">TestLogin#testLoginBadAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestLogin#testLoginEmpty</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestLogin#testLoginSuccessCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ProductDetails</h2><h3 id="m3">TestProductDetails#addDifferentProductToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">TestProductDetails#addMoreThanOneToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">TestProductDetails#addOneToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
