--- a/Coral_Joyeria/test-output/old/Login/methods.html
+++ b/Coral_Joyeria/test-output/old/Login/methods.html
@@ -1,2 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Login</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="b4c3ab">  <td>19/03/25 03:26:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestLogin@78c730]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/25 03:26:18</td>   <td>3802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.testLoginSuccessCase()[pri:0, instance:TestLogin@78c730]">testLoginSuccessCase</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/25 03:26:26</td>   <td>12459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLogin.clean()[pri:0, instance:TestLogin@78c730]">&lt;&lt;clean</td> 
+<td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/25 03:26:27</td>   <td>13233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.testLoginEmpty()[pri:1, instance:TestLogin@78c730]">testLoginEmpty</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/25 03:26:29</td>   <td>15227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLogin.clean()[pri:0, instance:TestLogin@78c730]">&lt;&lt;clean</td> 
+<td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/25 03:26:30</td>   <td>16018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.testLoginBadAccount()[pri:2, instance:TestLogin@78c730]">testLoginBadAccount</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="bbc1e0">  <td>19/03/25 03:26:32</td>   <td>17843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLogin.clean()[pri:0, instance:TestLogin@78c730]">&lt;&lt;clean</td> 
+<td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>19/03/25 03:26:32</td>   <td>18678</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestLogin@78c730]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>19/03/25 03:26:33</td>   <td>19320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:TestProductDetails@3a8624]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>19/03/25 03:26:36</td>   <td>22691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProductDetails.addOneToCart()[pri:0, instance:TestProductDetails@3a8624]">addOneToCart</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>19/03/25 03:26:51</td>   <td>37145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProductDetails.clean()[pri:0, instance:TestProductDetails@3a8624]">&lt;&lt;clean</td> 
+<td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>19/03/25 03:26:52</td>   <td>38014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProductDetails.addDifferentProductToCart()[pri:1, instance:TestProductDetails@3a8624]">addDifferentProductToCart</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>19/03/25 03:27:00</td>   <td>46217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProductDetails.clean()[pri:0, instance:TestProductDetails@3a8624]">&lt;&lt;clean</td> 
+<td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>19/03/25 03:27:01</td>   <td>47063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProductDetails.addMoreThanOneToCart()[pri:2, instance:TestProductDetails@3a8624]">addMoreThanOneToCart</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>19/03/25 03:27:09</td>   <td>55063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProductDetails.clean()[pri:0, instance:TestProductDetails@3a8624]">&lt;&lt;clean</td> 
+<td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>19/03/25 03:27:10</td>   <td>55977</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestProductDetails@3a8624]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
 </table>
